# wxml-parser-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  loader.js  package-lock.json  package.json  wxml-parser-rust.darwin-arm64.node
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-release.yml  release.yml
bindings/: wxml-parser-rs.darwin-arm64.node  wxml-parser-rust.darwin-arm64.node
crates/wxml-parser-core/: Cargo.toml
crates/wxml-parser-core/examples/: bench_runner.rs
crates/wxml-parser-core/src/: lib.rs
crates/wxml-parser-core/src/parser/: ast_builder.rs  cursor.rs  error.rs  eslint.rs  ir.rs  mod.rs  scanner.rs  script.rs  serialize.rs  syntax.rs
crates/wxml-parser-core/tests/: parse_for_eslint_spec.rs  parse_json_spec.rs
crates/wxml-parser-napi/: Cargo.toml
crates/wxml-parser-napi/src/: lib.rs
scripts/: bump-version.js  collect-bindings.js
tests/: base-spec.js  error-spec.js  eslint-spec.js  interpolation-spec.js  position-spec.js  program-spec.js  wxs-spec.js
tests/benchmark/: perf.js
tests/fixtures/bench/: complex-mixed-large.wxml
wxml-parser/: pnpm-lock.yaml
