[workspace]
members = [
  "crates/wxml-parser-core",
  "crates/wxml-parser-napi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["zhutaoran"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
thiserror = "1"
