[package]
name = "wxml-parser-napi"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Node-API bindings for wxml-parser-core"
repository = "https://github.com/wxmlfile/wxml-parser"
homepage = "https://github.com/wxmlfile/wxml-parser"
readme = "../../README.md"
rust-version = "1.77"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde_json = { workspace = true }
wxml_parser_core = { package = "wxml-parser", version = "0.0.1", path = "../wxml-parser-core" }

[features]
default = []
buffer = []

[build-dependencies]
napi-build = "2"
